--- a/style.css
+++ b/style.css
@@ -14,6 +14,8 @@ coloque nas sessões indicadas*/
     --cor-de-text: #464646;
     --cor-btn: #2A7AE4;
     --cor-border: #C8C8C8;
+    --cor-button: greenyellow;
+
 }
 
 body {
@@ -34,13 +36,12 @@ li {
 
 a {
     text-decoration: none;
-    /* color: var(--cor-de-link); */
     color: var(--cor-de-fundo);
 }
 
 
 .todo {
-    margin: 0 16px 0 16px;
+    /* margin: 0 16px 0 16px; */
     display: flex;
     flex-direction: column;
     overflow: hidden;
@@ -59,18 +60,13 @@ Enlace de la documentación oficial!
 https://en.bem.info/methodology/quick-start/*/
 
 /* Sección Menu */
-
-section.menu {
+/* mobile first */
+.menu {
     display: flex;
-    justify-content: space-between;
+    padding: 16px;
     align-items: center;
-    align-content: flex-end;
-    height: 0vh;
-    position: fixed;
-    left: 0;/* no iria en 0 */
-    top: 0;
-     right: 0; /*no iria en -65 0 */
-    background: rgba(0, 0, 0, 0.9);
+    justify-content: space-between;
+
 }
 
 .menu__header {
@@ -80,7 +76,7 @@ section.menu {
     font-family: 'Raleway';
     font-weight: 700;
     font-size: 16px;
-    color: white;
+    color: var(--cor-de-link);
 }
 
 section header h3.menu__title {
@@ -104,48 +100,26 @@ section header h3.menu__title {
 
 .menu__list {
     display: none;
+    color: var(--cor-de-link);
 }
 
 /*Sección Title*/
 
 section.title {
-    margin-top: 100px;
     padding: 16px;
-    /* margin-left: -65px; no iria */
-    /*margin-right: -65px;no iria*/
-    
-}
-
-
-
-
-div.title__container {
-    width: 700px;
-    color: #000;
-    
-
 }
 
 .title__div {
-
-    justify-content: space-around; /*le da el espacio entre los elementos  */
-    align-content: flex-start;
     display: flex;
-    
-    flex-direction: row-reverse;/*le PONE LAS LETRAS AL PRINCIPIO */
-
+    flex-direction: column;
+    gap: 16px;
 }
-
-
-
 
 .title__profile {
     border-radius: 50%;
-    
-
+    width: 98px;
+    height: 98px;
 }
-
-
 
 .title__bio {
     font-size: 22px;
@@ -158,33 +132,29 @@ div.title__container {
 
 .title__network {
     display: flex;
-    
+    padding: 0;
+    gap: 16px;
+    display: flex;
     justify-content: space-between;
     padding: 0;
-    gap: 20px;
-   
-
+    gap: 20px; 
 }
-
 
 .title__network__item a {
     display: flex;
     align-items: center;
-    padding: .5rem 1rem;
+    font-size: 14px;
     border-radius: 5px;
-    text-decoration: none;
-    background-color: greenyellow;
-    color: black;
+    background-color: var(--cor-button);
+    color: var(--cor-de-link);
+
 }
 
-
-.title__network__item a:hover{
+.title__network__item a:hover {
     box-shadow: 0 0 20px rgb(28, 216, 113);
     background: white;
 
 }
-
-/* falta centra titulooo */
 
 /*Sección About*/
 
@@ -197,23 +167,6 @@ section.about {
     margin-top: 1cm;
     font-size: 22px;
 }
-
-section.about div.datos {
-    margin-bottom: 20px;
-    display: flex;
-    justify-content: space-around;
-    font-size: 20px;
-    
-
-    /* background-color: #18d26e; */
-    /* background-color: greenyellow; */
-    box-shadow: 0 0 20px rgb(28, 216, 113);
-    /* background: white; */
-    
-}
-
-
-
 
 .about__paragraph {
     font-size: 14px;
@@ -231,14 +184,12 @@ section.skills {
     margin-top: 1cm;
     text-align: center;
     font-size: 22px;
-    
 }
 
 .skills__line {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-column-gap: 16px;
-    
+    grid-column-gap: 12px;
 }
 
 .skills__box {
@@ -247,15 +198,8 @@ section.skills {
     display: flex;
     align-items: flex-end;
     margin-top: 32px;
+    justify-content: center;
     text-align: center;
-    
-    
-    
-}
-
-.skills__name:hover {
-    box-shadow: 0 0 20px rgb(28, 216, 113);
-    background: white;
 }
 
 .skills__item {
@@ -267,20 +211,8 @@ section.skills {
 .skills__name {
     font-size: 24px;
     font-weight: 700;
-   
-}
-
-.skills__img{
-    height: 50%;
-    object-fit: contain;
-    margin-bottom: 20px;
-    filter: grayscale(1);
-    transition: all .3s ease-in-out;
-}
-
-.skills__img:hover{
-    filter: grayscale(0);
-    
+    box-shadow: 0 0 20px rgb(28, 216, 113);
+    background: white;
 }
 
 /*Sección Hobbies*/
@@ -294,7 +226,6 @@ section.hobbies {
     margin-top: 1cm;
     text-align: center;
     font-size: 22px;
-    
 }
 
 .hobbies__line {
@@ -403,7 +334,6 @@ section.experience {
 
 .experience__img {
     width: 100%;
-    
     margin-bottom: 8px;
 }
 
@@ -430,25 +360,39 @@ section.experience {
     gap: 16px;
 }
 
-.experiencia__botao--repo {
-    border: 1px solid var(--cor-btn);
-    background: none;
+.experience__botao--repo {
     font-size: 14px;
-    color: var(--cor-btn);
-    padding: 10px;
+    font-weight: 750;
+    padding: .7rem 1rem;
+    border-radius: 5px;
+    text-decoration: none;
+    background-color: var(--cor-button);
+    color: var(--cor-de-link);
+    border-color: var(--cor-button);
 }
+
 
 .experience__botao--demo {
-    border: 1px solid var(--cor-btn);
-    background: var(--cor-btn);
     font-size: 14px;
-    color: var(--cor-de-fundo-sec);
-    padding: 10px;
-    white-space: nowrap;
-
+    font-weight: 750;
+    padding: .7rem 1rem;
+    border-radius: 5px;
+    text-decoration: none;
+    background-color: var(--cor-button);
+    color: var(--cor-de-link);
+    border-color: var(--cor-button);
 }
 
 
+.experience__botao--repo:hover {
+    box-shadow: 0 0 20px rgb(28, 216, 113);
+    background: white;
+}
+
+.experience__botao--demo:hover {
+    box-shadow: 0 0 20px rgb(28, 216, 113);
+    background: white;
+}
 
 /*Contacto*/
 
@@ -459,7 +403,6 @@ section.formcontato {
 
 .formcontato__img {
     display: none;
-
 }
 
 .formcontato__subtext {
@@ -503,12 +446,19 @@ section.formcontato {
 }
 
 .formcontato__botao {
-    width: max-content;
-    border: 1px solid var(--cor-btn);
-    background: var(--cor-btn);
     font-size: 14px;
-    color: var(--cor-de-fundo-sec);
-    padding: 10px;
+    font-weight: 750;
+    padding: .7rem .5rem;
+    border-radius: 5px;
+    text-decoration: none;
+    background-color: var(--cor-button);
+    color: var(--cor-de-link);
+    border-color: var(--cor-button);
+}
+
+.formcontato__botao:hover {
+    box-shadow: 0 0 20px rgb(28, 216, 113);
+    background: white;
 }
 
 /*footeer*/
@@ -575,6 +525,9 @@ Utiliza las referencias de los breakpoints @media abajo */
         padding: 32px;
     }
 
+
+
+
     /*Skills*/
     section.skills {
         padding: 32px;
@@ -635,7 +588,16 @@ Utiliza las referencias de los breakpoints @media abajo */
 
     /*Menu*/
     section.menu {
-        padding: 32px 64px;
+        padding: 12px 64px;
+        background: var(--cor-de-link);
+        position: fixed;
+        left: 0;
+        right: 0;
+
+    }
+
+    .menu__header {
+        color: var(--cor-de-fundo);
     }
 
     .menu__nav {
@@ -657,11 +619,24 @@ Utiliza las referencias de los breakpoints @media abajo */
 
     /*Titulo*/
     section.title {
-        padding: 32px 64px;
+        padding: 88px 64px;
+    }
+
+    .title__container {
+        width: 700px;
+        color: var(--cor-de-link);
     }
 
     .title__div {
-        gap: auto;
+        justify-content: space-around;
+        align-content: flex-start;
+        display: flex;
+    }
+
+    .title__profile {
+        border-radius: 50%;
+        width: 98px;
+        height: 98px;
     }
 
     .title__profile {
@@ -677,6 +652,19 @@ Utiliza las referencias de los breakpoints @media abajo */
         font-size: 22px;
     }
 
+    .title__network {
+        display: flex;
+        justify-content: space-around;
+    }
+
+
+    .title__network__item a {
+        display: flex;
+        align-items: center;
+        padding: .5rem 1rem;
+        border-radius: 5px;
+    }
+
     /*Sección sobre mi*/
     section.about {
         padding: 32px 64px 88px;
@@ -685,6 +673,17 @@ Utiliza las referencias de los breakpoints @media abajo */
     .about__title {
         font-size: 32px;
     }
+
+    .about div.datos {
+        margin-bottom: 20px;
+        display: flex;
+        justify-content: space-around;
+        font-size: 20px;
+        background-color: #18d26e;
+        box-shadow: 0 0 20px rgb(28, 216, 113);
+        background: var(--cor-bg-sec);
+    }
+
 
     /*Skills*/
     section.skills {
@@ -699,6 +698,7 @@ Utiliza las referencias de los breakpoints @media abajo */
         grid-template-columns: repeat(auto-fit, minmax(176px, 1fr));
     }
 
+
     /*Hobbies*/
     section.hobbies {
         padding: 32px 64px 88px;
@@ -712,6 +712,9 @@ Utiliza las referencias de los breakpoints @media abajo */
         grid-template-columns: repeat(auto-fit, minmax(176px, 1fr));
     }
 
+    .hobbies__box {
+        justify-content: center;
+    }
 
     /*Formación Académica*/
     section.academic {
@@ -755,19 +758,6 @@ Utiliza las referencias de los breakpoints @media abajo */
     .experience__box:nth-child(2) .experience__img,
     .experience__box:nth-child(4) .experience__img {
         order: 1;
-    }
-
-    /* .experience__img{
-        width: 752px;
-        height: 406px;
-    } */
-
-    .experience__title {
-        font-size: 22px;
-    }
-
-    .experience__text {
-        font-size: 14px;
     }
 
     /*Contacto*/
